# blazingmq

./: .gitignore  README.md
src/groups/bmq/bmqeval/: bmqeval_simpleevaluatorparser.y
src/groups/mqb/mqbcfg/: mqbcfg.xsd
src/groups/mwc/mwcex/: mwcex_bindutil.h  mwcex_bindutil_cpp03.cpp  mwcex_bindutil_cpp03.h  mwcex_future.h  mwcex_future_cpp03.cpp  mwcex_future_cpp03.h  mwcex_promise.h  mwcex_promise_cpp03.cpp  mwcex_promise_cpp03.h
src/groups/mwc/mwcio/: mwcio_channel.h  mwcio_decoratingchannelpartialimp.h  mwcio_ntcchannel.cpp  mwcio_ntcchannel.h  mwcio_ntcchannelfactory.t.cpp  mwcio_testchannel.cpp  mwcio_testchannel.h
src/groups/mwc/mwcma/: mwcma_poisonallocator.cpp  mwcma_poisonallocator.h  mwcma_poisonallocator.t.cpp  mwcma_rawptr.cpp  mwcma_rawptr.h
src/groups/mwc/mwcma/package/: mwcma.mem
src/groups/mwc/mwcu/: mwcu_noop.h  mwcu_noop_cpp03.cpp  mwcu_noop_cpp03.h  mwcu_objectplaceholder.h  mwcu_objectplaceholder_cpp03.cpp  mwcu_objectplaceholder_cpp03.h  mwcu_operationchain.h  mwcu_operationchain_cpp03.cpp  mwcu_operationchain_cpp03.h
src/rust/bmq-rs/: Cargo.toml  README.md  build.rs
src/rust/bmq-rs/src/: api.rs  bridge.rs  defaults.rs  event_handler.rs  lib.rs
src/rust/bmq-rs/src/bmq/bridge/: errors.cpp  errors.h  session.cpp  session.h
